# kool

./: .travis.yml  README.md  debugstuff  deploy  kool.cabal  stack.yaml
lib/: ArgsParser.hs  BuildQueue.hs  Client.hs  Server.hs  Types.hs  Utils.hs
test/: ArgsParserTests.hs  BuildQueueTests.hs  ClientTests.hs  Main.hs  ServerTests.hs  UtilsTests.hs
test/client/: Tests.hs
test/server/: BuildQueueTests.hs  BuildTests.hs  CompilationTests.hs  ReserveTests.hs  Tests.hs  Utils.hs
