name:                kool
version:             0.1.0.0
synopsis:            Distributed cached compiler
description:         Please see README.md
homepage:            http://github.com/nilsson.dd/kool
license:             BSD3
author:              David Nilsson
maintainer:          nilsson.dd@gmail.com
category:            Tools
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Client, Types, Server
  build-depends:       base
                     , async                               == 2.0.*
                     -- , avahi                               == 0.1.*
                     , binary                              == 0.7.*
                     , bytestring                          == 0.10.*
                     , containers                          == 0.5.*
                     , distributed-process                 == 0.5.*
                     , distributed-process-async           == 0.2.*
                     , distributed-process-client-server   == 0.1.*
                     , distributed-process-extras          == 0.2.*
                     , distributed-process-simplelocalnet  == 0.2.*
                     , distributed-static                  == 0.3.*
                     , mtl                                 == 2.2.*
                     , network-transport                   == 0.4.*
                     , network-transport-tcp               == 0.4.*
                     , rank1dynamic                        == 0.3.*
                     , PSQueue                             == 1.1
                     , process                             == 1.2.*
                     , SHA                                 == 1.6.*
                     , text                                == 1.2.*
                     , thyme                               == 0.3.*
                     , transformers                        == 0.4.*
                     , vector-space                        == 0.10.*
  default-language:    Haskell2010

executable kool-client
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kool

  default-language:    Haskell2010

executable kool-server
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kool

  default-language:    Haskell2010

test-suite kool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kool
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: http://github.com/nilsson.dd/kool
